--- a/PrismMasterDetailSample/PrismMasterDetailSample/PrismMasterDetailSample.Droid/PrismMasterDetailSample.Droid.csproj
+++ b/PrismMasterDetailSample/PrismMasterDetailSample/PrismMasterDetailSample.Droid/PrismMasterDetailSample.Droid.csproj
@@ -156,6 +156,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml" />
+    <AndroidResource Include="Resources\drawable\hellomdbanner.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\hellomdbanner.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\hellomdbanner.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PrismMasterDetailSample\PrismMasterDetailSample.csproj">
